--- a/variables.html
+++ b/variables.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>CSS Variables</h1>
+    <h3>CSS Variables | CSS Custom Properties</h3>
     <header>
         <h1>Header</h1>
     </header>
