--- a/clip-path.html
+++ b/clip-path.html
@@ -55,27 +55,27 @@
     -->
     <div class="wrapper">
         <p><code>circle</code></p>
-        <img src="assets/1.jpg" class="circle">
+        <img src="assets/rakko.png" class="circle">
     </div>
     <div class="wrapper">
         <p><code>ellipse</code></p>
-        <img src="assets/1.jpg" class="ellipse">
+        <img src="assets/rakko.png" class="ellipse">
     </div>
     <div class="wrapper">
         <p><code>polygon</code></p>
-        <img src="assets/1.jpg" class="polygon">
+        <img src="assets/rakko.png" class="polygon">
     </div>
     <div class="wrapper">
         <p><code>inset</code></p>
-        <img src="assets/1.jpg" class="inset">
+        <img src="assets/rakko.png" class="inset">
     </div>
     <div class="wrapper">
         <p><code>svg</code></p>
-        <img src="assets/1.jpg" class="svg">
+        <img src="assets/rakko.png" class="svg">
     </div>
     <div class="wrapper">
         <p><code>animation</code></p>
-        <img src="assets/1.jpg" class="anim">
+        <img src="assets/rakko.png" class="anim">
     </div>
 
     <svg height="0" width="0">
