--- a/shape-outside.html
+++ b/shape-outside.html
@@ -22,7 +22,7 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
-    <img src="assets/1.jpg" width="200" class="circle">
+    <img src="assets/rakko.png" width="200" class="circle">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
@@ -35,7 +35,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
-    <img src="assets/1.jpg" width="200" class="polygon">
+    <img src="assets/rakko.png" width="200" class="polygon">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur fugit ipsam omnis molestias minus, quo, quas placeat, ex eaque alias iste veritatis maxime recusandae modi voluptatibus itaque nesciunt saepe?</p>
